Refactor indirect module directives